--- a/key.properties
+++ b/key.properties
@@ -2,3 +2,4 @@ storePassword=animalpuzzle
 keyPassword=animalpuzzle
 keyAlias=key
 storeFile=animalpuzzle.jks
+giturl=https://secret@github.com/hari2013gupta/AnimalPuzzle.git
